# Linux

cmake/Demo1/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/Demo2/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/Demo3/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/Demo3/math/: Makefile  cmake_install.cmake
cmake/Demo4/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/Demo4/math/: Makefile  cmake_install.cmake
gdb/: main  main.cpp  main.i
gdb/socket debug/: simple_client_main.cpp
hhdetect/hhdetect/: main.cpp
hhdetect/hhdetect.xcodeproj/: project.pbxproj
hhdetect/hhdetect.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hhsocket/: Utility.cpp
hhsocket/hhsocket_client/hhsocket_client/: ClientSocket.cpp  ClientSocket.h  HHLog.hpp  HHTypes.h  Socket.cpp  main.cpp
hhsocket/hhsocket_client/hhsocket_client.xcodeproj/: project.pbxproj
hhsocket/hhsocket_client/hhsocket_client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hhsocket/hhsocket_server/hhsocket_server/: HHTypes.h  Socket.cpp  Utility.h  main.cpp
hhsocket/hhsocket_server/hhsocket_server.xcodeproj/: project.pbxproj
makefile/: Circle.cpp  Circle.h  main.cpp  makefile  result
soDemo/: CMakeCache.txt  CMakeLists.txt  Demon  Makefile  cmake_install.cmake  main.cpp
soDemo/Math/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libmymath.dylib  math.cpp  math.h
soDemo/Other/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libother.dylib  other.cpp  other.h
socket/: simple_server_main.cpp
(+4 files in other folders)
